--- a/about/about-firm-foundation.html
+++ b/about/about-firm-foundation.html
@@ -135,14 +135,14 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid w-100" src="../img/about-main.jpg" alt="About Firm Foundation LLC">
+                        <img class="img-fluid w-100" src="../img/logo/ff-logo-white.jpg" alt="About Firm Foundation LLC">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
                         Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a
-                        premier provider of integrated medical and mental health support services in Sussex County,
+                        premier provider of integrated medical and mental health support services in Kent County,
                         Delaware.
                         We are committed to delivering exceptional, holistic care in a single, convenient location,
                         ensuring
@@ -169,20 +169,23 @@
                             </div>
                         </div>
                     </div>
-                    <p><i class="fa fa-check-square text-primary me-3"></i>
-                        We are a trusted healthcare provider.
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i>
-                        We are conscious of the needs of our patients.
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i>
-                        Our approach is patient-centered, focusing on the whole person.
-                    </p>
-                    <div class="border border-5 border-primary p-4 text-center my-4">
-                        <h5 class="lh-base text-uppercase mb-0">Our commitment is deep-rooted in providing a diverse
-                            population.</h4>
+                    <div class="row g-4 text-center m-3">
+                        <div class="col-4">
+                            <h5 class="text-primary py-3">Mission</h5>
+                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
+                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                        </div>
+                        <div class="col-4">
+                            <h5 class="text-primary py-3">Vision</h5>
+                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
+                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                        </div>
+                        <div class="col-4">
+                            <h5 class="text-primary py-3">Approach</h5>
+                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
+                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                        </div>
                     </div>
-                    <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Read More</a>
                 </div>
             </div>
         </div>
@@ -192,7 +195,7 @@
 
    
     <!-- Our Hallmark Start -->
-    <div class="container-fluid pt-6 pb-6 bg-grey">
+    <div class="container-fluid py-6 bg-grey">
         <div class="container pt-4">
             <h1 class="display-6 text-uppercase mb-5 text-center">Our Hallmark</h1>
             <div class="row g-0 feature-row wow fadeIn" data-wow-delay="0.1s">
@@ -205,7 +208,7 @@
                             <h5 class="text-uppercase mb-3">Holistic Approach</h5>
                             <p>
                                 We believe that true wellness extends beyond treating symptoms. 
-                                Our philosophy is rooted in a holistic approach, which views each patient as a whole person
+                                Our philosophy is rooted in a holistic approach, which views each patient as a whole person.
                             </p>
                         </div>
                     </div>
