--- a/our-services.html
+++ b/our-services.html
@@ -139,7 +139,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/minor-procedure.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/minor-procedure.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Minor Procedures</h5>
                             </div>
@@ -151,11 +151,23 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/dot.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/dot.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">DOT Exams</h5>
                             </div>
                             <a class="btn btn-light px-3" href="services/dot-exams.html">Read More<i
+                                    class="bi bi-chevron-double-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item">
+                        <div class="service-inner pb-5">
+                            <img class="img-fluid w-100" src="img/services/mental-health.png" alt="">
+                            <div class="service-text px-5 pt-4">
+                                <h5 class="text-uppercase">Mental Health and Counseling</h5>
+                            </div>
+                            <a class="btn btn-light px-3" href="services/mental-health-and-counseling.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -187,7 +199,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/chronic-disease-management.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/chronic-disease-mgt.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Chronic Disease Management</h5>
                             </div>
@@ -211,7 +223,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/asthma-management.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/asthma-kid.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Asthma Management</h5>
                             </div>
@@ -220,10 +232,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item">
+                        <div class="service-inner pb-5">
+                            <img class="img-fluid w-100" src="img/services/substance-abuse.png" alt="">
+                            <div class="service-text px-5 pt-4">
+                                <h5 class="text-uppercase">Substance Use</h5>
+                            </div>
+                            <a class="btn btn-light px-3" href="services/substance-use.html">Read More<i
+                                    class="bi bi-chevron-double-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/screening.png " alt="">
+                            <img class="img-fluid w-100" src="img/services/health-screening.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Physical & Health Screening</h5>
                             </div>
@@ -235,7 +259,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/anxiety-depression.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/anxiety-and-depression.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Anxiety & Depression Management</h5>
                             </div>
@@ -247,11 +271,11 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/birth-control.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/birth-control.png" alt="">
                             <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Birth Control</h5>
+                                <h5 class="text-uppercase">Contraceptive Management</h5>
                             </div>
-                            <a class="btn btn-light px-3" href="services/birth-control.html">Read More<i
+                            <a class="btn btn-light px-3" href="services/contraceptive-management.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -259,47 +283,11 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/erectile-dysfunction.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/erectile-dysfunction.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Erectile Dysfunction Management</h5>
                             </div>
                             <a class="btn btn-light px-3" href="services/erectile-dysfunction-management.html">Read More<i
-                                    class="bi bi-chevron-double-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                    <div class="service-item">
-                        <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/hair-loss.jpg" alt="">
-                            <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Hair Loss Management</h5>
-                            </div>
-                            <a class="btn btn-light px-3" href="services/hair-loss-management.html">Read More<i
-                                    class="bi bi-chevron-double-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item">
-                        <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/mental-health.jpg" alt="">
-                            <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Mental Health and Counseling</h5>
-                            </div>
-                            <a class="btn btn-light px-3" href="services/mental-health-and-counseling.html">Read More<i
-                                    class="bi bi-chevron-double-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                    <div class="service-item">
-                        <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/smoking-cessation.jpg" alt="">
-                            <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Smoking Cessation Management</h5>
-                            </div>
-                            <a class="btn btn-light px-3" href="services/smoking-cessation-management.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -319,11 +307,11 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/travel-clinic.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/travel-medicine.png" alt="">
                             <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Travel Clinic</h5>
+                                <h5 class="text-uppercase">Travel Medicine</h5>
                             </div>
-                            <a class="btn btn-light px-3" href="services/travel-clinic.html">Read More<i
+                            <a class="btn btn-light px-3" href="services/travel-medicine.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -331,11 +319,35 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/women-and-men-health.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/smoking-cessation.jpg" alt="">
+                            <div class="service-text px-5 pt-4">
+                                <h5 class="text-uppercase">Smoking Cessation</h5>
+                            </div>
+                            <a class="btn btn-light px-3" href="services/smoking-cessation-management.html">Read More<i
+                                    class="bi bi-chevron-double-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <div class="service-inner pb-5">
+                            <img class="img-fluid w-100" src="img/services/man-and-women-health.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Women and Men's Health</h5>
                             </div>
                             <a class="btn btn-light px-3" href="services/womens-and-mens-health.html">Read More<i
+                                    class="bi bi-chevron-double-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <div class="service-inner pb-5">
+                            <img class="img-fluid w-100" src="img/services/sports-physicals.jpg" alt="">
+                            <div class="service-text px-5 pt-4">
+                                <h5 class="text-uppercase">Sports/School Physicals</h5>
+                            </div>
+                            <a class="btn btn-light px-3" href="services/sports-physicals.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
