--- a/services/anxiety-and-depression-management.html
+++ b/services/anxiety-and-depression-management.html
@@ -137,14 +137,14 @@
                 <p>
                     At Firm Foundation LLC, we recognize that anxiety and depression are not just mental health issues; 
                     they are complex conditions that affect every aspect of your life. Our Anxiety and Depression Management 
-                    Service is designed to provide you with a comprehensive, compassionate, and personalized approach to 
+                    Service is designed to provide you with a comprehensive, compassionate and personalized approach to 
                     managing these challenges. We believe in empowering our clients with the tools and support they need to 
                     reclaim their lives and find joy again.
                 </p>
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/anxiety-depression.jpg" alt="">
+                    <img class="img-fluid" src="../img/services/anxiety-and-depression.png" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>Our Approach</h1>
@@ -175,7 +175,7 @@
                             </div>
                             <p class="fs-5">
                                 Firm Foundations provides convenient telehealth services, making it easier for 
-                                clients to access care from various locations (e.g., the states of Ohio and Florida).
+                                clients to access care from various locations.
                             </p>
                         </div>
                         <div class="testimonial-item">
