--- a/services/erectile-dysfunction-management.html
+++ b/services/erectile-dysfunction-management.html
@@ -140,21 +140,63 @@
                     of life. That's why we offer compassionate, confidential care tailored to each individual's needs.
                 </p>
             </div>
-            <div class="text-center mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>What Is Erectile Dysfunction?</h1>
-                <p class="fs-5 mb-4">
-                    Erectile Dysfunction(ED) is the consistent inability to achieve or maintain an erection firm 
-                    enough for sexual activity. It's more common than many realize and can result from a 
-                    variety of factors, including:
-                </p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Chronic conditions like diabetes, hypertension or heart disease.</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Hormonal imbalances or low testosterone.</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Psychological stress, anxiety or depression.</b></p>
-                <p><i class="fa fa-check-square text-primary me-3"></i><b>Lifestyle factors such as smoking, alcohol use, or poor sleep.</b></p>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- What Is Erectile Dysfunction Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5">
+                    <div class="mt-5">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What Is Erectile Dysfunction?
+                        </h1>
+                        <p class="text-light mb-4 wow fadeIn" data-wow-delay="0.4s">
+                            Erectile Dysfunction(ED) is the consistent inability to achieve or maintain an erection firm
+                            enough for sexual activity. It's more common than many realize and can result from a
+                            variety of factors, including:
+                        </p>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">
+                                        Chronic conditions like diabetes, hypertension or heart disease.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Hormonal imbalances or low testosterone.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Psychological stress, anxiety or depression.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">
+                                        Lifestyle factors such as smoking, alcohol use or poor sleep.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <!-- What Is Erectile Dysfunction End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/erectile-dysfunction.jpg" alt="">
+                    <img class="img-fluid" src="../img/services/erectile-dysfunction.png" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>Our Approach</h1>
