--- a/services/immigration-medical-exams.html
+++ b/services/immigration-medical-exams.html
@@ -144,7 +144,7 @@
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/immigration.jpg" alt="">
+                    <img class="img-fluid" src="../img/services/imigra.jpg" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>What's Included in Your Exam</h1>
@@ -183,14 +183,6 @@
                             </div>
                             <p class="fs-5">
                                 Verification of immunization records and administration of any required vaccines.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Completion of Form I-693</h5>
-                            </div>
-                            <p class="fs-5">
-                                Our civil surgeon will complete and seal the official USCIS medical form for submission.
                             </p>
                         </div>
                     </div>
