--- a/services/minor-procedures.html
+++ b/services/minor-procedures.html
@@ -144,7 +144,7 @@
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/minor-procedure.jpg" alt="">
+                    <img class="img-fluid" src="../img/services/minor-procedure.png" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>Common Procedures We Perform</h1>
@@ -172,23 +172,6 @@
                             </div>
                             <p class="fs-5">
                                 Prompt relief from painful skin infections through sterile drainage and aftercare.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Joint Injections</h5>
-                            </div>
-                            <p class="fs-5">
-                                Corticosteroid or other therapeutic injections to relieve pain and 
-                                inflammation in knees, shoulders and other joints.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Toenail Removal & Ingrown Nail Treatment</h5>
-                            </div>
-                            <p class="fs-5">
-                                Care for painful or infected nails with minimal discomfort and fast recovery.
                             </p>
                         </div>
                         <div class="testimonial-item">
