--- a/services/screening.html
+++ b/services/screening.html
@@ -141,33 +141,69 @@
                     health status, identify potential risks and take informed steps toward better well-being.
                 </p>
             </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>What We Screen For</h1>
-                <div class="col-md-6">
-                    <div class="text-start pb-5">
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Blood Pressure & Heart Health.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Diabetes & Blood Sugar Levels.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Cholesterol & Lipid Profiles.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Kidney & Liver Function.</b></p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="text-start pb-5">
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Body Mass Index (BMI).</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Cancer Risk Assessments.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Customized Screenings Based on Age, Gender & Family History.</b>
-                        </p>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- What We Screen For Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5">
+                    <div class="mt-5">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What We Screen For
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Blood Pressure & Heart Health.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Diabetes & Blood Sugar Levels.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Cholesterol & Lipid Profiles.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Kidney & Liver Function.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Body Mass Index (BMI).</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Cancer Risk Assessments.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Customized Screenings Based on Age, Gender & Family History.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- What We Screen For End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/screening.png" alt="">
+                    <img class="img-fluid" src="../img/services/health-screening.png" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>What to Expect?</h1>
