--- a/services/smoking-cessation-management.html
+++ b/services/smoking-cessation-management.html
@@ -191,17 +191,82 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>What We Screen For</h1>
-                    <div class="text-start pb-5">
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Judgment-Free Zone.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Experienced Providers.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Flexible Scheduling.</b>
-                        </p>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- What We Screen For Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-12 pt-5">
+                    <div class="mt-5">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            What We Screen For
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">
+                                        Tobacco Use History.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Nicotine Dependence.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Readiness to Quit.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">
+                                        Previous Quit Attempts.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Co-occurring Conditions.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Physical Health Assessment.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">
+                                        Support Systems.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Barriers to Quitting.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Preferred Cessation Methods.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <!-- What We Screen For End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Why It Matters</h1>
                 <p class="fs-5 mb-4">
