--- a/services/womens-and-mens-health.html
+++ b/services/womens-and-mens-health.html
@@ -142,42 +142,105 @@
                     to your individual needs and goals.
                 </p>
             </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
-                <div class="col-md-6">
-                    <h1 class="text-center">Women's Health Services</h1>
-                    <div class="text-start pb-5">
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Annual Well-Woman Exams.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Birth Control Counseling & Prescriptions.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>STI Testing & Treatment.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Pap Smears & Cervical Cancer Screenings.</b></p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Menstrual & Hormonal Support.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Breast Health Assessments.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Pregnancy Testing & Prenatal Referrals.</b></p>
+        </div>
+    </div>
+    <!-- Main Service Tile End -->
+
+    <!-- Features Start -->
+    <div class="container-fluid feature bullet-window wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-0 justify-content-center">
+                <div class="col-lg-6 pt-5 px-3">
+                    <div class="mt-5 text-center">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Women's Health Services
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Annual Well-Woman Exams.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Birth Control Counseling & Prescriptions.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">STI Testing & Treatment.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Pap Smears & Cervical Cancer Screenings.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Menstrual & Hormonal Support.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Breast Health Assessments.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Pregnancy Testing & Prenatal Referrals.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h1 class="text-center">Men's Health Services</h1>
-                    <div class="text-start pb-5">
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Routine Physicals.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Prostate & Testicular Screenings.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Blood Pressure & Cholesterol Checks.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>STI Testing & Treatment.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Erectile Function & Hormonal Support.</b>
-                        </p>
-                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Lifestyle Counseling (nutrition, sleep, mental health).</b>
-                        </p>
+                <div class="col-lg-6 pt-5 px-3">
+                    <div class="mt-5">
+                        <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
+                            Men's Health Services
+                        </h1>
+                        <div class="row g-4 pt-2 mb-4">
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Routine Physicals.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Prostate & Testicular Screenings.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Blood Pressure & Cholesterol Checks.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">STI Testing & Treatment.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Erectile Function & Hormonal Support.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <p class="text-white text-uppercase mb-0">Lifestyle Counseling (nutrition, sleep, mental health).</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Features End -->
+
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
             <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Why Choose Firm Foundation LLC?</h1>
                 <div class="text-start pb-5">
