--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 150px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
@@ -113,10 +113,10 @@
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1">
-                    <img class="img-fluid" src="img/carousel/dr-amoako-patience.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-5.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1" aria-label="Slide 2">
-                    <img class="img-fluid" src="img/carousel/carousel-1.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-6.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="2" aria-label="Slide 3">
                     <img class="img-fluid" src="img/carousel/carousel-3.jpg" alt="Image">
@@ -124,42 +124,39 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel/dr-amoako-patience.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-5.jpg" alt="Image">
                     <div class="carousel-caption">
-                        <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
-                            Patient-Centered Care
+                        <h1 class="display-2 text-white mb-4 animated zoomIn">
+                            Firm Foundation Health & Wellness Center
                         </h1>
                         <p class="lead text-white mb-4 animated fadeIn">
-                            At Firm Foundation LLC, we prioritize the needs and preferences of our patients, ensuring that they 
-                            are at the center of their care.
+                            On Christ the solid Rock I stand, all other ground is sinking sand. <span class="text-primary">Psalm 62:2</span>
                         </p>
                         <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">About Us</a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-6.jpg" alt="Image">
                     <div class="carousel-caption">
-                        <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
-                            Convenient and Accessible Services
+                        <h1 class="display-2 text-white mb-4 animated zoomIn">
+                            Patient Centered Care & Holistic Approach
                         </h1>
                         <p class="lead text-white mb-4 animated fadeIn">
-                            We offer a range of services designed to be convenient and accessible for our patients, including
-                            telemedicine options and flexible scheduling.
+                            We believe that true wellness extends beyond treating symptoms. 
+                            Our philosophy is rooted in a holistic approach, which views each patient as a whole person.
                         </p>
-                        <!-- <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a> -->
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel/carousel-3.jpg" alt="Image">
                     <div class="carousel-caption">
-                        <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
-                            Holistic Approach
+                        <h1 class="display-2 text-white mb-4 animated zoomIn">
+                            Convenient and Accessible Services
                         </h1>
                         <p class="lead text-white mb-4 animated fadeIn">
-                            At Firm Foundation LLC, we take a holistic approach to healthcare, addressing not just the
-                            physical but also the mental and emotional well-being of our patients.
+                            We strive to make healthcare accessible for everyone. We offer flexible scheduling, streamlined 
+                            administrative processes and a commitment to providing timely and efficient care.
                         </p>
-                        <!-- <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a> -->
                     </div>
                 </div>
             </div>
@@ -174,14 +171,14 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid w-100" src="img/about-main.jpg">
+                        <img class="img-fluid w-100" src="img/logo/ff-logo-white.jpg" alt="Logo">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
                         Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a
-                        premier provider of integrated medical and mental health support services in Sussex County,
+                        premier provider of integrated medical and mental health support services in Kent County,
                         Delaware.
                         We are committed to delivering exceptional, holistic care in a single, convenient location,
                         ensuring
@@ -208,18 +205,22 @@
                             </div>
                         </div>
                     </div>
-                    <p><i class="fa fa-check-square text-primary me-3"></i>
-                        We are a trusted healthcare provider.
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i>
-                        We are conscious of the needs of our patients.
-                    </p>
-                    <p><i class="fa fa-check-square text-primary me-3"></i>
-                        Our approach is patient-centered, focusing on the whole person.
-                    </p>
-                    <div class="border border-5 border-primary p-4 text-center my-4">
-                        <h5 class="lh-base text-uppercase mb-0">Our commitment is deep-rooted in providing a diverse
-                            population.</h4>
+                    <div class="row g-3 text-center m-3">
+                        <div class="col-4 border border-2 border-primary">
+                            <h5 class="text-primary py-3">Mission</h5>
+                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
+                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                        </div>
+                        <div class="col-4 border border-2 border-primary">
+                            <h5 class="text-primary py-3">Vision</h5>
+                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
+                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                        </div>
+                        <div class="col-4 border border-2 border-primary">
+                            <h5 class="text-primary py-3">Approach</h5>
+                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
+                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                        </div>
                     </div>
                     <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">Read More</a>
                 </div>
@@ -239,7 +240,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/minor-procedure.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/minor-procedure.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Minor Procedures</h5>
                             </div>
@@ -251,11 +252,23 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/dot.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/dot.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">DOT Exams</h5>
                             </div>
                             <a class="btn btn-light px-3" href="services/dot-exams.html">Read More<i
+                                    class="bi bi-chevron-double-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item">
+                        <div class="service-inner pb-5">
+                            <img class="img-fluid w-100" src="img/services/mental-health.png" alt="">
+                            <div class="service-text px-5 pt-4">
+                                <h5 class="text-uppercase">Mental Health & Counseling</h5>
+                            </div>
+                            <a class="btn btn-light px-3" href="services/mental-health-and-counseling.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -275,11 +288,11 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/obesity-management.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/health-screening.png" alt="">
                             <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Obesity Management</h5>
+                                <h5 class="text-uppercase">Physical & Health Screening</h5>
                             </div>
-                            <a class="btn btn-light px-3" href="services/obesity-management.html">Read More<i
+                            <a class="btn btn-light px-3" href="services/screening.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -287,11 +300,23 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/chronic-disease-management.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/chronic-disease-mgt.png" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Chronic Disease Management</h5>
                             </div>
                             <a class="btn btn-light px-3" href="services/chronic-disease-management.html">Read More<i
+                                    class="bi bi-chevron-double-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <div class="service-inner pb-5">
+                            <img class="img-fluid w-100" src="img/services/obesity-management.jpg" alt="">
+                            <div class="service-text px-5 pt-4">
+                                <h5 class="text-uppercase">Obesity Management</h5>
+                            </div>
+                            <a class="btn btn-light px-3" href="services/obesity-management.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
@@ -304,30 +329,6 @@
                                 <h5 class="text-uppercase">Immigration Medical Exams</h5>
                             </div>
                             <a class="btn btn-light px-3" href="services/immigration-medical-exams.html">Read More<i
-                                    class="bi bi-chevron-double-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item">
-                        <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/asthma-management.png" alt="">
-                            <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Asthma Management</h5>
-                            </div>
-                            <a class="btn btn-light px-3" href="services/asthma-management.html">Read More<i
-                                    class="bi bi-chevron-double-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                    <div class="service-item">
-                        <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/screening.png " alt="">
-                            <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Physical & Health Screening</h5>
-                            </div>
-                            <a class="btn btn-light px-3" href="services/screening.html">Read More<i
                                     class="bi bi-chevron-double-right ms-1"></i></a>
                         </div>
                     </div>
